fix dark mode table border color

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -117,7 +117,7 @@ td a {
 		@apply font-semibold;
 	}
 
-	td {
+	tbody td {
 		@apply border-tmtGray-700;
 	}
 
